# wise0wl-launcher

./: .cursorrules  README.md  index.html  package-lock.json  package.json  vite.config.ts
.cursor/rules/: ai-behavior.md  application-overview.md  rust.md  typescript.md  ui-design.md
src/: App.tsx  main.tsx
src-tauri/: .env.example  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: downloader.rs  java.rs  lib.rs  main.rs  minecraft.rs  modpack.rs  settings.rs
src/components/: index.ts
src/components/Layout/: MainLayout.tsx
src/components/Pages/: HomePage.tsx  MicrosoftAuth.tsx  SettingsDialog.tsx
src/contexts/: ModpackContext.tsx  ThemeContext.tsx  UIContext.tsx
src/types/: index.ts
