[package]
name = "wise0wl-launcher"
version = "2.0.0"
description = "The Wise0wl Minecraft Launcher"
authors = ["FredoJF"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wise0wl_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = { version = "2.0.0-beta.5" }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["time"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
dirs = "5"
sha2 = "0.10"
zip = "0.6"
thiserror = "1.0"
tauri-plugin-fs = "2"
once_cell = "1.19"
# For Linux/macOS extraction
flate2 = "1.0"
tar = "0.4"
# For PKCE OAuth flow
rand = "0.8"
base64 = "0.21"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
# For environment variables
dotenv = "0.15"

